# rusty_engine

./: Cargo.toml  README.md  build_wasm.bat  index.html
examples/: simple_game.rs
src/engine/: Cargo.toml
src/engine/src/: lib.rs
src/jaren_ecs/: Cargo.toml
src/jaren_ecs/src/: system.rs
src/jaren_ecs_derive/: Cargo.toml
src/jaren_ecs_derive/src/: lib.rs
src/rendering/: Cargo.toml  shader.wgsl
src/rendering/src/: renderer.rs
